fix positioning on small screens

--- a/wsgi/static/less/base.less
+++ b/wsgi/static/less/base.less
@@ -616,6 +616,6 @@ div.col-md-9 a {
 }
 
 div.content li img.img-responsive {
-  width: 100%;
+  width: 130%;
   max-width: 85px;
 }
